# radio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  boardconfig.h  config.template.h  flake.nix  localconfig.template.h  partitions.csv  provision.py  pyproject.toml  sdkconfig.defaults
.devcontainer/: Dockerfile
AS5600_plotter/: AS5600_plotter.ino
AS5600_test/: AS5600_test.ino
TouchButtonTests/: TouchButtonTests.ino  localconfig.h
adf/: .gitignore  CMakeLists.txt  apply_idf_patches.py  certificates.pem  config.template.h  platformio.ini  sdkconfig.defaults
adf/cmake/: add-extra-include-directories.cmake
adf/components/boardconfig/: CMakeLists.txt  board.h  tas2505.c  tas2505.h
adf/components/ifaddrs/: CMakeLists.txt  ifaddrs.c
adf/components/ifaddrs/include/: ifaddrs.h
adf/components/kvscommonlws/: CMakeLists.txt
adf/components/kvspic/: CMakeLists.txt
adf/components/kvswebrtcclient/: CMakeLists.txt
adf/components/libcextras/: CMakeLists.txt
adf/components/lws/: CMakeLists.txt
adf/components/peer/: CMakeLists.txt
adf/components/rubberband/: CMakeLists.txt  rubberband_filter.cpp  rubberband_filter.h
adf/components/signalsmith/: CMakeLists.txt  stretch_filter.cpp  stretch_filter.h
adf/components/soundtouch/: CMakeLists.txt  soundtouch_filter.cpp  soundtouch_filter.h
adf/components/srtp/: CMakeLists.txt
adf/components/uname/: CMakeLists.txt  uname.c
adf/main/: CMakeLists.txt  Kconfig.projbuild  adc.h  battery.c  battery.h  console.c  main.c  main.h  stream.c  stream.h  things.cpp  things.h  webrtc.c  webrtc.h  wifi.c  wifi.h
cmake/: add-extra-properties.cmake
components/boardconfig/: board.h  board_pins_config.c
components/file_stream/: CMakeLists.txt  file_stream.c
components/file_stream/include/: file_stream.h
components/kvswebrtcclient/: CMakeLists.txt  Kconfig
components/libcextras/: CMakeLists.txt  ifaddrs.c  netdb.c  socketpair.c  uname.c
components/libcextras/include/: ifaddrs.h  netdb.h  socketpair.h
components/libcextras/include/netinet/: in.h
components/libcextras/include/sys/: utsname.h
components/lws/: CMakeLists.txt
components/ogg/: OggConfig.cmake  README
components/opus/: README
components/opusfile/: CMakeLists.txt
components/opusfile_stream/: CMakeLists.txt  opusfile_stream.c
components/opusfile_stream/include/: opusfile_stream.h
main/: CMakeLists.txt  Kconfig.projbuild  accelerometer.c  accelerometer.h  adc.c  adc.h  audio_output.c  audio_output.h  audio_volume.c  audio_volume.h  battery.c  battery.h  bluetooth.c  bluetooth.h  bounds.c  bounds.h  calibration.c  calibration.h  captive_dns_server.c  captive_dns_server.h  captive_http_server.c  captive_http_server.h  console.c  console.h  debounce.c  debounce.h  extreme.c  extreme.h  file_cache.c  file_cache.h  fm.c  fm.h  http_utils.c  http_utils.h  idf_component.yml  led.c  led.h  magnet.c  magnet.h  main.c  (+41 more)
main/captive/: index.html  style.css
range_test/: range_test.ino
si4702_oled/: si4702_oled.ino
si4702_test/: si4702_test.ino
si4702_test_nolib/: si4702_test_nolib.ino
si4702_test_simple/: si4702_test_simple.ino
si4702_test_simpler/: si4702_test_simpler.ino
si4702_working_example/: si4702_working_example.ino
tas2505_si4702_test/: tas2505_si4702_test.ino
tas2505_test/: boardconfig.h  tas2505_test.ino
