idf_component_register(
  SRCS
  adc.c
  battery.c
  calibration.c
  console.c
  debounce.c
  file_cache.c
  fm.c
  led.c
  main.c
  mixer.c
  playback.c
  static.c
  storage.c
  tas2505.c
  things.cpp
  webrtc.c
  webrtc_manager.c
  wifi.c
  INCLUDE_DIRS
  "."
  REQUIRES
  audio_pipeline
  esp_adc
  PRIV_REQUIRES
  app_update
  audio_board
  audio_stream
  boardconfig
  console
  file_stream
  esp_app_format
  esp_http_client
  esp_littlefs
  espcoredump
  kvscommonlws
  kvswebrtcclient
  opus
  sdmmc)
