idf_component_register(
  SRCS
  accelerometer.c
  adc.c
  audio_output.c
  battery.c
  bluetooth.c
  bounds.c
  calibration.c
  console.c
  debounce.c
  file_cache.c
  fm.c
  led.c
  magnet.c
  main.c
  mixer.c
  playback.c
  static.c
  station_pi.c
  station_pi_activation.c
  station_2pi.c
  storage.c
  tas2505.c
  things.cpp
  tone_generator.c
  tuner.c
  webrtc.c
  webrtc_manager.c
  wifi.c
  INCLUDE_DIRS
  "."
  REQUIRES
  audio_pipeline
  esp_adc
  PRIV_REQUIRES
  app_update
  audio_board
  audio_stream
  boardconfig
  bt
  console
  file_stream
  esp_app_format
  esp_http_client
  esp_littlefs
  espcoredump
  kvscommonlws
  kvswebrtcclient
  opus
  opusfile
  sdmmc)

target_compile_options(${COMPONENT_LIB} PRIVATE -Werror)