cmake_minimum_required(VERSION 3.12)

idf_component_register(PRIV_REQUIRES mbedtls)

set(SRTP_INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/srtp_install)

include(ExternalProject)

ExternalProject_Add(srtp
  GIT_REPOSITORY https://github.com/cisco/libsrtp
  GIT_TAG 5f8dfbf7eedbc2fa737cf0a2931b464f10396379
  CMAKE_ARGS
    -DENABLE_MBEDTLS=ON
    -DLIBSRTP_TEST_APPS=OFF
    -DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
    -DBUILD_SHARED_LIBS=OFF
    -DENABLE_WARNINGS_AS_ERRORS=OFF
    -DMBEDTLS_INCLUDE_DIRS=$<TARGET_PROPERTY:mbedtls,INTERFACE_INCLUDE_DIRECTORIES>
    -DMBEDTLS_LIBRARY=$<TARGET_FILE:mbedtls>
    -DMBEDX509_LIBRARY=$<TARGET_FILE:mbedx509>
    -DMBEDCRYPTO_LIBRARY=$<TARGET_FILE:mbedcrypto>
    -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
  USES_TERMINAL_DOWNLOAD TRUE
  USES_TERMINAL_CONFIGURE TRUE
  USES_TERMINAL_BUILD TRUE
  USES_TERMINAL_INSTALL TRUE
  INSTALL_DIR ${SRTP_INSTALL_DIR}
  BUILD_BYPRODUCTS ${SRTP_INSTALL_DIR}/lib/libsrtp3.a
)

add_prebuilt_library(srtp_lib "${SRTP_INSTALL_DIR}/lib/libsrtp3.a")
target_include_directories(srtp_lib INTERFACE "${SRTP_INSTALL_DIR}/include")
add_dependencies(srtp_lib srtp)
target_link_libraries(${COMPONENT_LIB} INTERFACE srtp_lib)
